delete friend by id
